# Squidn

./: CONTRIBUTING.md
.github/workflows/: ci.yml
crates/sc-app/src/: app.rs  main.rs
crates/sc-core/src/: model.rs
crates/sc-design-jp/: Cargo.toml
crates/sc-design-jp/src/: allowable_stress.rs  capacity_spectrum.rs  holding_capacity.rs  lib.rs
crates/sc-edit/src/: lib.rs
crates/sc-element/src/: beam.rs  concentrated.rs  factory.rs  fiber_elem.rs  lib.rs  member_load.rs  ms.rs  shell.rs
crates/sc-io/src/: migrate.rs  results.rs  scz.rs  stbridge.rs
crates/sc-load/: Cargo.toml
crates/sc-load/src/: ai.rs  combo.rs  floor.rs
crates/sc-material/src/: lib.rs  uniaxial.rs
crates/sc-math/src/: sparse.rs
crates/sc-mcp/: Cargo.toml
crates/sc-mcp/src/: lib.rs
crates/sc-skeleton/: Cargo.toml
crates/sc-skeleton/src/: lib.rs
crates/sc-solver/src/: analysis.rs  arc_length.rs  assemble.rs  (+6 more)
crates/squid-n-app/: Cargo.toml
crates/squid-n-mcp/: Cargo.toml
crates/squid-n-solver/: Cargo.toml
dev_docs/: ST-Bridge完全往復_申し送り.md  床（スラブ）設計.md
dev_docs/handoff/: 固有値モード形状表示修正_申し送り.md  変形図の床追従とスケール改善_申し送り.md
dev_docs/specs/: P2_線形解析と荷重.md  UI設計.md
dev_docs/v_and_v/: 断面検定_参照実装照合.md  材料強度_基準強度照合.md
docs/: ROADMAP.md  SUMMARY.md  UI導線改善.md  introduction.md  mcp_server.md  model_io.md  result_view.md  申し送り.md
docs/v_and_v/: README.md  load_calculation_review.md  p8_review.md  剛性計算_RESP-D照合.md  応力解析_RESP-D照合.md  断面検定_RESP-D照合.md  終局検定_RESP-D照合.md  非線形モデル_RESP-D照合.md  非線形動的解析_RESP-D照合.md
specs/: UI設計.md  原典照合リスト.md
v_and_v/: README.md  剛性計算_参照実装照合.md
(+258 files in other folders)
